--- a/backend/app/vercel.json
+++ b/backend/app/vercel.json
@@ -15,7 +15,7 @@
   ],
   "env": {
     "APP_ENV": "production",
-    "APP_DEBUG": "false",
+    "APP_DEBUG": "true",
     "APP_KEY": "base64:H5dVtrugEsHd+BM9eQEjGLJI579Ns0ZGDUuhhQ7yHiw=",
     "APP_URL": "https://backend-auto-app.vercel.app/",
     "DB_CONNECTION": "mysql",
