--- a/backend/app/vercel.json
+++ b/backend/app/vercel.json
@@ -17,12 +17,6 @@
     "APP_ENV": "local",
     "APP_DEBUG": "true",
     "APP_KEY": "base64:H5dVtrugEsHd+BM9eQEjGLJI579Ns0ZGDUuhhQ7yHiw=",
-    "APP_URL": "https://backend-auto-app.vercel.app/",
-    "DB_CONNECTION": "mysql",
-    "DB_HOST": "aws.connect.psdb.cloud",
-    "DB_PORT": "3306",
-    "DB_DATABASE": "auto-app-db",
-    "DB_USERNAME": "jsidlhnc4rnjeztti7s7",
-    "DB_PASSWORD": "pscale_pw_3d0fo1TU0ZqquYiztmvVaRwBW3VEAGVde7UvmQOzP4p"
+    "APP_URL": "https://backend-auto-app.vercel.app/"
   }
 }
