--- a/backend/app/vercel.json
+++ b/backend/app/vercel.json
@@ -12,5 +12,23 @@
       "src": "/(.*)",
       "dest": "/api/index.php"
     }
-  ]
+  ],
+  "env": {
+    "APP_ENV": "local",
+    "APP_DEBUG": "true",
+    "APP_KEY": "base64:H5dVtrugEsHd+BM9eQEjGLJI579Ns0ZGDUuhhQ7yHiw=",
+    "APP_URL": "https://backend-auto-app.vercel.app/",
+    "DB_CONNECTION":"mysql",
+    "DB_HOST":"aws.connect.psdb.cloud",
+    "DB_PORT":"3306",
+    "DB_DATABASE":"auto-app-db",
+    "DB_USERNAME":"jsidlhnc4rnjeztti7s7",
+    "DB_PASSWORD":"pscale_pw_3d0fo1TU0ZqquYiztmvVaRwBW3VEAGVde7UvmQOzP4p",
+    "MYSQL_ATTR_SSL_CA":"/etc/ssl/certs/ca-certificates.crt",
+    "PLANETSCALE_DB":"auto-app-db",
+    "PLANETSCALE_DB_USERNAME":"jsidlhnc4rnjeztti7s7",
+    "PLANETSCALE_DB_PASSWORD":"pscale_pw_3d0fo1TU0ZqquYiztmvVaRwBW3VEAGVde7UvmQOzP4p",
+    "PLANETSCALE_DB_HOST":"aws.connect.psdb.cloud",
+    "PLANETSCALE_SSL_CERT_PAT":"/etc/ssl/certs/ca-certificates.crt"
+  }
 }
