--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-    
   },
-    "dependencies": {
+  "dependencies": {
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "formik": "^2.4.2",
+    "google-map-react": "^2.2.1",
     "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
