--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.4.7",
     "formik": "^2.4.2",
     "google-map-react": "^2.2.1",
+    "mapbox-gl": "^2.15.0",
     "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.0.4",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "uuid": "^9.0.0"
   }
 }
